# ddp-diary

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  pyproject.toml  spec.md
assets/conventions/: conventions.md
assets/prompts/partials/: session-digest.md
assets/prompts/roles/: host.md  vm.md
assets/prompts/tasks/: daily.md  monthly.md  weekly.md
config/: config.example.toml  host.toml  vm.toml
docs/: architecture.md  data-repo.md  operations.md
launchers/linux/: crontab.example  install-cron.sh  run.sh
launchers/windows/: daily.cmd  monthly.cmd  register-tasks.ps1  run.ps1  weekly.cmd
legacy/: README.md
legacy/host/: CLAUDE.md
legacy/host/prompts/: daily.md  monthly.md  weekly.md
legacy/host/scripts/: daily.cmd  monthly.cmd  run-journal.ps1  weekly.cmd
src/ddp_diary/: __init__.py  __main__.py  claude_client.py  cli.py  config.py  doctor.py  errors.py  gitops.py  logging_setup.py  models.py  mount.py  paths.py  prompts.py  roles.py  runner.py  session_extract.py  status.py
src/ddp_diary/sync/: __init__.py  export.py  ingest.py
tests/: conftest.py  test_claude_client.py  test_cli.py  test_config.py  test_doctor.py  test_gitops.py  test_launchers.py  test_mount.py  test_prompts.py  test_roles.py  test_runner.py  test_session_extract.py  test_status.py  test_sync_export.py  test_sync_ingest.py
