[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ddp-diary"
version = "1.0.0"
description = "Cross-platform personal engineering journal automation (host + VM, one core)"
requires-python = ">=3.9"
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
ddp-diary = "ddp_diary.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ddp_diary = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
